<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".BusinessSignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="421dp"
            android:layout_height="592dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/new_pic" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:contentDescription="Scan"
            android:onClick="SignOut"
            android:src="@drawable/exit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/ivShopProfilePic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="364dp"
            android:background="#ddd"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Select Image"
            app:layout_constraintTop_toBottomOf="@+id/ivShopProfilePic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Welcome Smart Business"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSelectImage" />

        <!-- Form Fields: aligned uniformly -->
        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:hint="@string/first_name_hint_text"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/last_name_hint_text"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etFirstName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/email_id_hint_text"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etLastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/password_hint_text"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etRetypePassword"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/re_password_hint_text"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etShopName"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/shop_name_hint_text"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etRetypePassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etContactNo"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/contact_hint_text"
            android:inputType="number"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etShopName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etAddress1"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/address1_hint_text"
            android:inputType="textPostalAddress"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etContactNo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etAddress2"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/address2_hint_text"
            android:inputType="textPostalAddress"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etAddress1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/city_hint_text"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etAddress2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etPostalCode"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/postal_code_hint_text"
            android:inputType="number"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etCity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/spinnerShopType"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:entries="@array/shop_types"
            app:layout_constraintTop_toBottomOf="@+id/etPostalCode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etWebsiteURL"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/shop_website_url"
            android:inputType="textUri"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/spinnerShopType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etShopManagerName"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/shop_manager_name_hint_text"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etWebsiteURL"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etShopContact"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/shop_contact_hint_text"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etShopManagerName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etOpeningTime"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="false"
            android:hint="Opening Time"
            app:layout_constraintTop_toBottomOf="@+id/etShopContact"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etClosingTime"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="Closing Time"
            android:focusable="false"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@+id/etOpeningTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="351dp"
            android:layout_height="58dp"
            android:layout_marginBottom="72dp"
            android:backgroundTint="@color/purple_700"
            android:onClick="OnSignupInBusinessClick"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etClosingTime"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
