<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".BusinessSignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="421dp"
            android:layout_height="592dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/new_pic" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:contentDescription="Scan"
            android:onClick="SignOut"
            android:src="@drawable/exit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/ivProfilePic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="364dp"
            android:background="#ddd"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Select Image"
            app:layout_constraintTop_toBottomOf="@+id/ivProfilePic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Welcome Smart Business"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSelectImage" />

        <!-- Form Fields: aligned uniformly -->
        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:hint="@string/first_name_hint_text"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="414dp"
            android:layout_height="52dp"
            android:layout_marginTop="12dp"
            android:hint="@string/last_name_hint_text"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/email_id_hint_text"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etLastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/password_hint_text"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etRetypePassword"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/re_password_hint_text"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <EditText
            android:id="@+id/etDOB"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="Date of Birth"
            android:focusable="false"
            android:clickable="true"
            android:textColor="@color/black"
            android:inputType="none"
            app:layout_constraintTop_toBottomOf="@+id/etRetypePassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etAnniversary"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="Anniversary Date"
            android:focusable="false"
            android:clickable="true"
            android:textColor="@color/black"
            android:inputType="none"
            app:layout_constraintTop_toBottomOf="@+id/etDOB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <EditText
            android:id="@+id/etContactNo"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/contact_hint_text"
            android:inputType="number"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etAnniversary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="923dp" />

        <EditText
            android:id="@+id/etAddress1"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/address1_hint_text"
            android:inputType="textPostalAddress"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etContactNo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etAddress2"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/address2_hint_text"
            android:inputType="textPostalAddress"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etAddress1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/city_hint_text"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etAddress2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etPostalCode"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:hint="@string/postal_code_hint_text"
            android:inputType="number"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etCity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="336dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="52dp"
            android:backgroundTint="@color/purple_700"
            android:onClick="OnSignupInCustomerClick"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPostalCode" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
